@@ -31,14 +31,15 @@ import svn.fs
 from errors import InvalidPropertyValue
 from fileids import generate_svn_file_id, generate_file_id
 import format
-from scheme import TrunkBranchingScheme, NoBranchingScheme
+from scheme import (TrunkBranchingScheme, NoBranchingScheme, 
+                    ListBranchingScheme)
 from transport import SvnRaTransport
 from tests import TestCaseWithSubversionRepository
 from tests.test_fileids import MockRepo
 from repository import (revision_id_to_svk_feature,
                         SvnRepositoryFormat, SVN_PROP_BZR_REVISION_ID,
                         generate_revision_metadata, parse_revision_metadata,
-                        parse_revid_property)
+                        parse_revid_property, SVN_PROP_BZR_BRANCHING_SCHEME)
 from revids import (MAPPING_VERSION, escape_svn_path, unescape_svn_path,
                     parse_svn_revision_id, generate_svn_revision_id)
 
@@ -652,12 +653,12 @@ class TestSubversionRepositoryWorks(TestCaseWithSubversionRepository):
         self.build_tree({'dc/foo': "data", 'dc/blah': "other data"})
         self.client_add("dc/foo")
         self.client_add("dc/blah")
-        self.client_commit("dc", "My Message")
+        self.client_commit("dc", "My Message") #1
         self.build_tree({'dc/foo': "data2", "dc/bar/foo": "data3"})
         self.client_add("dc/bar")
-        self.client_commit("dc", "Second Message")
+        self.client_commit("dc", "Second Message") #2
         self.build_tree({'dc/foo': "data3"})
-        self.client_commit("dc", "Third Message")
+        self.client_commit("dc", "Third Message") #3
         repository = Repository.open("svn+%s" % repos_url)
         inv = repository.get_inventory(
                 repository.generate_revision_id(1, "", "none"))
@@ -758,6 +759,15 @@ class TestSubversionRepositoryWorks(TestCaseWithSubversionRepository):
         repository = Repository.open("svn+%s" % repos_url)
         self.assertRaises(NoSuchRevision, 
                 repository.lookup_revision_id, "foobar")
+
+    def test_set_branching_scheme_property(self):
+        repos_url = self.make_client('d', 'dc')
+        self.client_set_prop("dc", SVN_PROP_BZR_BRANCHING_SCHEME, 
+            "trunk\nbranches/*\nbranches/tmp/*")
+        self.client_commit("dc", "set scheme")
+        repository = Repository.open("svn+%s" % repos_url)
+        self.assertEquals(ListBranchingScheme(["trunk", "branches/*", "branches/tmp/*"]).branch_list,
+                          repository.scheme.branch_list)
 
     def test_lookup_revision_id_invalid_uuid(self):
         repos_url = self.make_client('d', 'dc')
@@ -971,11 +981,6 @@ class TestSubversionRepositoryWorks(TestCaseWithSubversionRepository):
         self.client_commit("dc", "Initial commit")
         self.assertRaises(NoSuchRevision, 
                 lambda: repos._mainline_revision_parent("trunk", 1, NoBranchingScheme()))
-
-    def test_get_scheme(self):
-        repos_url = self.make_client('d', 'dc')
-        oldrepos = Repository.open("svn+"+repos_url)
-        self.assertEquals("trunk1", str(oldrepos.get_scheme("trunk1")))
 
 
 class TestSvnRevisionTree(TestCaseWithSubversionRepository):
